--- a/Fomalhaut2/Base.lproj/FilterList.storyboard
+++ b/Fomalhaut2/Base.lproj/FilterList.storyboard
@@ -11,30 +11,36 @@
             <objects>
                 <viewController showSeguePresentationStyle="single" id="tHN-Aj-iAS" customClass="FilterListViewController" customModule="Fomalhaut2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="yAQ-CE-s9y">
-                        <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="178" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bBK-pZ-es6">
-                                <rect key="frame" x="0.0" y="0.0" width="180" height="38"/>
+                            <button verticalHuggingPriority="750" imageHugsTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bBK-pZ-es6">
+                                <rect key="frame" x="10" y="0.0" width="168" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="IzY-Dg-Mav"/>
                                 </constraints>
-                                <buttonCell key="cell" type="smallSquare" title=" New Collection" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="left" alignment="left" lineBreakMode="truncatingTail" imageScaling="proportionallyDown" inset="2" id="yBO-YQ-5oF">
+                                <buttonCell key="cell" type="smallSquare" title=" New Collection" bezelStyle="smallSquare" image="NSAddTemplate" imagePosition="leading" alignment="left" lineBreakMode="truncatingTail" imageScaling="proportionallyDown" inset="2" id="yBO-YQ-5oF">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <attributedString key="userComments">
+                                    <fragment content="NewCollection"/>
+                                </attributedString>
+                                <connections>
+                                    <action selector="addCollection:" target="tHN-Aj-iAS" id="pJh-61-t96"/>
+                                </connections>
                             </button>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="dPZ-jP-IfI">
-                                <rect key="frame" x="0.0" y="38" width="180" height="262"/>
+                                <rect key="frame" x="0.0" y="38" width="178" height="262"/>
                                 <subviews>
-                                    <scrollView autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="JoB-Uu-TKl">
-                                        <rect key="frame" x="0.0" y="0.0" width="180" height="262"/>
+                                    <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="JoB-Uu-TKl">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="262"/>
                                         <clipView key="contentView" drawsBackground="NO" id="fML-VE-p75">
-                                            <rect key="frame" x="1" y="1" width="178" height="260"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="262"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" autosaveName="FilterListView" rowHeight="20" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="6" outlineTableColumn="Ahe-qq-R5w" id="9fb-tX-5sX" customClass="FilterListView" customModule="Fomalhaut2" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="260"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="262"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -115,7 +121,7 @@
                                             <nil key="backgroundColor"/>
                                         </clipView>
                                         <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="qwK-5U-TSh">
-                                            <rect key="frame" x="1" y="183" width="158" height="16"/>
+                                            <rect key="frame" x="0.0" y="246" width="178" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
                                         <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="CcZ-ng-yOd">
@@ -137,7 +143,7 @@
                             <constraint firstItem="dPZ-jP-IfI" firstAttribute="leading" secondItem="yAQ-CE-s9y" secondAttribute="leading" id="Gbk-O8-XBe"/>
                             <constraint firstItem="bBK-pZ-es6" firstAttribute="top" secondItem="dPZ-jP-IfI" secondAttribute="bottom" id="Nke-Jo-Tf4"/>
                             <constraint firstAttribute="trailing" secondItem="dPZ-jP-IfI" secondAttribute="trailing" id="TPX-NK-zFn"/>
-                            <constraint firstItem="bBK-pZ-es6" firstAttribute="leading" secondItem="yAQ-CE-s9y" secondAttribute="leading" id="dUT-gw-N24"/>
+                            <constraint firstItem="bBK-pZ-es6" firstAttribute="leading" secondItem="yAQ-CE-s9y" secondAttribute="leading" constant="10" id="dUT-gw-N24"/>
                             <constraint firstAttribute="bottom" secondItem="bBK-pZ-es6" secondAttribute="bottom" id="pZQ-Yh-RPu"/>
                             <constraint firstAttribute="trailing" secondItem="bBK-pZ-es6" secondAttribute="trailing" id="s88-ks-6tq"/>
                         </constraints>
